cmake_minimum_required(VERSION 2.8.4)
project(recipies)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    algorithm/diagraph/spec/digraph_spec.rb
    algorithm/diagraph/digraph.rb
    algorithm/diagraph/directed_cycle.rb
    algorithm/diagraph/directed_depth_first_search.rb
    algorithm/diagraph/example.in
    algorithm/diagraph/foo.rb
    algorithm/diagraph/Makefile
    algorithm/diagraph/out.png
    algorithm/diagraph/out.pv
    algorithm/graph/features/graph.feature
    algorithm/graph/features/graph_steps.rb
    algorithm/graph/spec/graph_spec.rb
    algorithm/graph/spec/mst_spec.rb
    algorithm/graph/example.in
    algorithm/graph/graph.rb
    algorithm/graph/Makefile
    algorithm/graph/mst.rb
    algorithm/graph/out.png
    algorithm/graph/out.pv
    algorithm/graph/pqueue.rb
    algorithm/graph/pv.rb
    algorithm/string/compression/dna.rb
    "algorithm/#intp.c#"
    algorithm/abc.rb
    algorithm/binary_search.rb
    algorithm/intp.c
    algorithm/Makefile
    algorithm/out.png
    algorithm/out.pv
    algorithm/sort.rb
    algorithm/sortp.c
    angularjs/angular.min.js
    angularjs/clock.html
    angularjs/emailParser.html
    angularjs/filter.html
    angularjs/index.html
    angularjs/interpolate.html
    angularjs/parent-children.html
    angularjs/parsefun.html
    angularjs/Thumbs.db
    apache/foo.c
    apr/Makefile
    apr/mp-sample.c
    asm/abc/abc.asm
    asm/abc/main.asm
    asm/abc/Makefile
    asm/macos/hello.asm
    asm/macos/hello.o
    asm/macos/Makefile
    asm/a.out
    asm/aaa.asm
    asm/aas.asm
    asm/argnum.asm
    asm/banana.c
    asm/build
    asm/clrscr.asm
    asm/cpuid.asm
    asm/dateis.asm
    asm/dateis.c
    asm/dateis.o
    asm/fgets.asm
    asm/hello.asm
    asm/hello2.asm
    asm/hexdump1.asm
    asm/hexdump2.asm
    asm/inline_data.asm
    asm/jcxz.asm
    asm/jz.asm
    asm/lea.asm
    asm/libs.asm
    asm/loop.asm
    asm/macro.asm
    asm/macro_label.asm
    asm/macro_lib.mac
    asm/Makefile
    asm/movsb.asm
    asm/mul.asm
    asm/nearjmp.asm
    asm/neg.asm
    asm/nested_loop.asm
    asm/newline.asm
    asm/newsandbox.asm
    asm/pic.asm
    asm/pic.c
    asm/push_esp.asm
    asm/puts.asm
    asm/README.md
    asm/retcall.asm
    asm/ruler.asm
    asm/sandbox.asm
    asm/scasb.asm
    asm/shellcode.c
    asm/shift_bits.asm
    asm/showargs1.asm
    asm/showargs2.asm
    asm/showargs3.asm
    asm/small.asm
    asm/sscanf.asm
    asm/stackframe.asm
    asm/stosb.asm
    asm/template.asm
    asm/template2.asm
    asm/uppercase1.asm
    asm/uppercase2.asm
    asm/xlat.asm
    asm/xlat2.asm
    asm/zero_flag.asm
    autotools/1/configure.ac
    autotools/1/Makefile.in
    autotools/1/README
    autotools/2/src/Makefile.in
    autotools/2/configure.ac
    autotools/2/Makefile.in
    autotools/2/README
    autotools/3/autogen.sh
    autotools/3/build.sh
    autotools/3/main.c
    autotools/3/Makefile.in
    autotools/3/README
    autotools/4/foo.c
    autotools/AC_MSG_WARN/configure.ac
    autotools/jupiter/src/main.c
    autotools/jupiter/src/Makefile
    autotools/jupiter/generate.sh
    autotools/jupiter/Makefile
    autotools/scripts/use_automake.sh
    awk/nr.awk
    awk/passwd.awk
    awk/ultimate.txt
    bash/bin/prepdir
    bash/here_str/1.sh
    bash/sandbox/1.txt
    bash/sandbox/a
    bash/sandbox/b
    bash/sandbox/c
    bash/sandbox/d
    bash/sandbox/e
    bash/sandbox/f
    bash/sandbox/g
    bash/sandbox/h
    bash/sandbox/play-if.sh
    bash/wicked/bbcnews
    bash/wicked/bestcompress
    bash/wicked/calc
    bash/wicked/cgrep
    bash/wicked/checkspelling
    bash/wicked/color
    bash/wicked/crontab
    bash/wicked/DIR
    bash/wicked/echon
    bash/wicked/enabled
    bash/wicked/filelock
    bash/wicked/findman
    bash/wicked/formatdir
    bash/wicked/fquota
    bash/wicked/getlinks
    bash/wicked/hilow
    bash/wicked/inpath
    bash/wicked/killall_
    bash/wicked/library
    bash/wicked/library_test
    bash/wicked/logrm
    bash/wicked/newdf
    bash/wicked/newquota
    bash/wicked/nice_number
    bash/wicked/normdate
    bash/wicked/numberlines
    bash/wicked/okaywords
    bash/wicked/sample.txt
    bash/wicked/scriptbc
    bash/wicked/setdate
    bash/wicked/showfile
    bash/wicked/shpell
    bash/wicked/spelldict
    bash/wicked/state.capitals.txt
    bash/wicked/states
    bash/wicked/timein
    bash/wicked/toolong
    bash/wicked/valid_alpha_num
    bash/wicked/valid_date
    bash/wicked/valid_float
    bash/wicked/valid_int
    bash/wicked/verifycron
    bash/87.sh
    bash/88.sh
    bash/arg.sh
    bash/bashdb
    bash/bashdb.fns
    bash/bashdb.pre
    bash/cols.txt
    bash/debug.sh
    bash/dirstack.sh
    bash/fmt
    bash/how_many_cmds
    bash/menu
    bash/menu2
    bash/ndu.sh
    bash/newrm
    bash/opts.sh
    bash/opts2.sh
    bash/palindrome.sh
    bash/quotes.txt
    bash/randomquote.sh
    bash/read.sh
    bash/read1
    bash/read2
    bash/README.md
    bash/remember
    bash/remindme
    bash/rs.sh
    bash/selectsort
    bash/setdate
    bash/trap
    bash/winter-after-sex.txt
    bin/genkey
    c/lib/common.c
    c/lib/common.h
    c/linkedlist/linkedlist.c
    c/linkedlist/linkedlist.h
    c/ncurses/box
    c/ncurses/box.c
    c/ncurses/Makefile
    c/net/inet_aton.c
    c/proc/Makefile
    c/proc/sem-ex.c
    c/ptrace/eatsyscall.asm
    c/ptrace/Makefile
    c/ptrace/simple_tracer.c
    "c/#hahaha.sh#"
    "c/#perror.c#"
    "c/#pipe-ls-wc.c#"
    "c/#ptr.c#"
    c/a.out
    c/argv_addr.c
    c/array.c
    c/arraypass.c
    c/arraysize.c
    c/byte_to_binary.c
    c/computed_goto.c
    c/const_game.c
    c/copy.c
    c/decl.c
    c/des_rol.c
    c/endian.c
    c/enum.c
    c/fwrite.c
    c/fwrite.o
    c/getaddrinfo.c
    c/getenv.c
    c/getenv.o
    c/gethostbyaddr.c
    c/hostname.c
    c/hostname.o
    c/input_char.c
    c/int.c
    c/jit.c
    c/Makefile
    c/memset.c
    c/nonblock.c
    c/nonblock.o
    c/null.c
    c/null.o
    c/perror.c
    c/pipe-ls-wc.c
    c/poll_sample.c
    c/process.c
    c/process.o
    c/promotion.c
    c/promotion.s
    c/ptr.c
    c/ptr2.c
    c/ptr2.s
    c/ptr_type.c
    c/quicksort.c
    c/README
    c/README.md
    c/ro.c
    c/save.c
    c/scope.c
    c/sizeof.c
    c/sort.c
    c/stdarg.c
    c/stdarg.o
    c/strrchr.c
    c/strtol.c
    c/terse_loop.c
    c/test.txt
    c/union.c
    c/vfork.c
    c/vfork.o
    c/vis.c
    c/write_char.c
    c/xor.c
    c/yum_list_format.pl
    c/zombie.c
    c/zombie.o
    c/zombie_fix.c
    c/zombie_fix.o
    clojure/inline_func.clj
    clojure/loop.clj
    clojure/persist.clj
    clojure/pig-latin.clj
    clojure/sequence.clj
    clojure/short-circuit.clj
    clojure/sql.clj
    cpp/a.out
    cpp/BinarySearch.cpp
    cpp/BinarySearch.h
    cpp/triangle.cpp
    cpp/triangle.s
    erratadiff/el5.txt
    erratadiff/el6.txt
    erratadiff/el7.txt
    erratadiff/erratadiff.rb
    erratadiff/erratadiff.sh
    expertc/c1.c
    expertc/Makefile
    flex/sql/glrmysql.l
    flex/sql/glrmysql.y
    flex/sql/lpmysql.l
    flex/sql/lpmysql.y
    flex/sql/Makefile
    flex/sql/pmysql.l
    flex/sql/pmysql.y
    flex/cppcalc-ctx.hh
    flex/cppcalc.l
    flex/cppcalc.yy
    flex/fb1-1.l
    flex/fb1-2.l
    flex/fb1-3.l
    flex/fb1-4.l
    flex/fb1-5.l
    flex/fb1-5.y
    flex/fb2-1.l
    flex/fb2-2.l
    flex/fb2-3.l
    flex/fb2-4.l
    flex/fb2-5.l
    flex/fb3-1.h
    flex/fb3-1.l
    flex/fb3-1.y
    flex/fb3-1funcs.c
    flex/fb3-2.h
    flex/fb3-2.l
    flex/fb3-2.y
    flex/fb3-2funcs.c
    flex/Makefile
    flex/Makefile.ch1
    flex/Makefile.ch2
    flex/Makefile.ch3
    flex/Makefile.ch9
    flex/purecalc.h
    flex/purecalc.l
    flex/purecalc.y
    flex/purecalcfuncs.c
    flex/purewc.l
    flex/README
    hacking/self.c
    java/Happy.class
    java/Happy.h
    java/Happy.java
    java/HappyImp.c
    java/libHappy.dylib
    java/libHappy.o
    jgroup/overview.mindnode/QuickLook/Preview.jpg
    jgroup/overview.mindnode/style.mindnodestyle/contents.xml
    jgroup/overview.mindnode/style.mindnodestyle/metadata.plist
    jgroup/overview.mindnode/contents.xml
    jgroup/overview.mindnode/viewState.plist
    jgroup/initProtocolStack.sd
    jgroup/jgroupCharts.zargo
    jgroup/newJChannel.sd
    jgroup/send.txt
    jgroup/sender.sd
    jgroup/workbook.graffle
    js/anon.js
    js/array-like.js
    js/async.html
    js/bind.js
    js/callee.js
    js/closure.js
    js/fs.js
    js/funcall.js
    js/level.js
    js/libraries.js
    js/log.js
    js/ninja2.js
    js/palindrome.js
    js/scope.js
    js/sort.js
    js/useless.html
    js/webserver.js
    kernel/cdev/chardev.c
    kernel/cdev/Makefile
    kernel/cdev_rw/chardev_rw.c
    kernel/cdev_rw/client.c
    kernel/cdev_rw/Makefile
    kernel/helloworld/helloworld.c
    kernel/helloworld/Makefile
    kernel/kbleds/kbleds.c
    kernel/kbleds/Makefile
    kernel/a.out
    kernel/racing_signal.c
    learn-libtool/sv_lib_v1.c
    learn-libtool/sv_v1.map
    learn-libtool/vis.c
    less/sample.less
    lisp/5-1.lisp
    lisp/7.lisp
    lisp/8.lisp
    lisp/assoc.cli
    lisp/case.cli
    lisp/cond.cli
    lisp/defun.lisp
    lisp/graph-util.lisp
    lisp/guess-my-number.cli
    lisp/Makefile
    lisp/my-length.cli
    lisp/play.cli
    lisp/printing.lisp
    lisp/progn.cli
    lisp/when.cli
    lisp/wizard.cli
    lisp/wumpus.lisp
    "lpi/tlpi-book/shlibs/#mod2.c#"
    lpi/tlpi-book/shlibs/dynload.o
    lpi/tlpi-book/shlibs/mod1.o
    lpi/tlpi-book/shlibs/mod2.o
    lpi/tlpi-book/shlibs/mod3.o
    lpi/tlpi-book/shlibs/prog.o
    lpi/5-1.c
    lpi/Makefile
    lpi/offset.c
    lpi/offset.o
    lpi/vis.map
    lpi/vis.so
    lpi/vis1.c
    lpi/vis_1.c
    lpi/vis_comm.c
    make/assert/Makefile
    make/auto/clean
    make/auto/main.c
    make/auto/Makefile
    make/autotools/names/a
    make/autotools/names/b
    make/autotools/names/c
    make/autotools/names/Makefile
    make/ch01/cw.c
    make/ch01/lexer.c
    make/ch01/lexer.l
    make/ch01/Makefile
    make/ch03/hello.c
    make/ch03/Makefile
    make/ch05/Makefile
    make/debug/Makefile
    make/filter/Makefile
    make/func/Makefile
    make/global_var/Makefile
    make/inc/Makefile
    make/inc/my.inc
    make/multi/a/Makefile
    make/multi/Makefile
    make/scope/Makefile
    make/target_var/Makefile
    make/try01/Makefile
    make/try02/configure.ac
    make/try02/helloworld.c
    make/try02/Makefile.in
    make/try02/README
    make/try03/autogen.sh
    make/try03/autoscan.log
    make/try03/configure.ac
    make/try03/configure.scan
    make/try03/helloworld.c
    make/try03/Makefile.in
    make/try03/README
    make/vars/Makefile
    make/vars/pre
    make/vars/pre2
    make/vpath/include/hello.h
    make/vpath/src/hello.c
    make/vpath/src/main.c
    make/vpath/Makefile
    make/Makefile
    make/README
    mathematica/Benford.nb
    mathematica/perspective_projection.nb
    mathematica/perspective_projection.rb
    mathematica/Untitled-1.nb
    mathematica/Untitled-2.nb
    openldap/entries.ldif
    openldap/exampleco.ldif
    openldap/modify.ldif
    openldap/n2.ldif
    openldap/newuser.ldif
    out/production/recipies/ABC.class
    out/production/recipies/ChatClient.class
    out/production/recipies/ChatClientDriver.class
    out/production/recipies/ChatClientImpl.class
    out/production/recipies/ChatClientImpl_Stub.class
    out/production/recipies/ChatServer.class
    out/production/recipies/ChatServerDriver.class
    out/production/recipies/ChatServerImpl.class
    out/production/recipies/ChatServerImpl_Stub.class
    out/production/recipies/Happy.class
    out/production/recipies/RMIDemo.class
    out/production/recipies/RMIDemoClient.class
    out/production/recipies/RMIDemoImpl.class
    out/production/recipies/RMIDemoImpl_Stub.class
    out/production/recipies/RMIDemoServer.class
    pqueue/etc/test.rb
    pqueue/lib/pqueue.rb
    pqueue/test/test_pqueue.rb
    pqueue/work/Assembly
    pqueue/CONTRIBUTE.md
    pqueue/Gemfile
    pqueue/HISTORY.md
    pqueue/Index.yml
    pqueue/LICENSE.txt
    pqueue/MANIFEST
    pqueue/README.md
    puppet/manifests/nodes.pp
    puppet/manifests/site.pp
    python/13.py
    python/17.py
    python/20.py
    python/21.py
    python/32.py
    python/34.py
    python/35.py
    python/argparse.py
    python/ex13.py
    python/ex14.py
    python/get_builds.py
    qb/cube.bas
    qb/line.bas
    rmi/out/production/rmi/ABC.class
    rmi/out/production/rmi/ChatClient.class
    rmi/out/production/rmi/ChatClientDriver.class
    rmi/out/production/rmi/ChatClientImpl.class
    rmi/out/production/rmi/ChatClientImpl_Stub.class
    rmi/out/production/rmi/ChatServer.class
    rmi/out/production/rmi/ChatServerDriver.class
    rmi/out/production/rmi/ChatServerImpl.class
    rmi/out/production/rmi/ChatServerImpl_Stub.class
    rmi/out/production/rmi/RMIDemo.class
    rmi/out/production/rmi/RMIDemoClient.class
    rmi/out/production/rmi/RMIDemoImpl.class
    rmi/out/production/rmi/RMIDemoImpl_Stub.class
    rmi/out/production/rmi/RMIDemoServer.class
    rmi/ABC.class
    rmi/ABC.java
    rmi/ChatClient.class
    rmi/ChatClient.java
    rmi/ChatClientDriver.class
    rmi/ChatClientDriver.java
    rmi/ChatClientImpl.class
    rmi/ChatClientImpl.java
    rmi/ChatClientImpl_Stub.class
    rmi/ChatClientImpl_Stub.java
    rmi/ChatServer.class
    rmi/ChatServer.java
    rmi/ChatServerDriver.class
    rmi/ChatServerDriver.java
    rmi/ChatServerImpl.class
    rmi/ChatServerImpl.java
    rmi/ChatServerImpl_Stub.class
    rmi/ChatServerImpl_Stub.java
    rmi/rmi.iml
    rmi/RMIDemo.class
    rmi/RMIDemo.java
    rmi/RMIDemoClient.class
    rmi/RMIDemoClient.java
    rmi/RMIDemoImpl.class
    rmi/RMIDemoImpl.java
    rmi/RMIDemoImpl_Stub.class
    rmi/RMIDemoImpl_Stub.java
    rmi/RMIDemoServer.class
    rmi/RMIDemoServer.java
    rpath/alt/lib.c
    rpath/lib.c
    rpath/main.c
    rpath/Makefile
    ruby/cookbook/1-1.rb
    ruby/cookbook/1-15.rb
    ruby/cookbook/1-18.rb
    ruby/cookbook/1-2.rb
    ruby/cookbook/1-3.rb
    ruby/cookbook/1-4.rb
    ruby/cookbook/1-5.rb
    ruby/cookbook/1-6.rb
    ruby/cookbook/1-7.rb
    ruby/cookbook/1-8.rb
    ruby/cookbook/1-9.rb
    ruby/cookbook/8-3.rb
    ruby/cookbook/smiley.html
    ruby/misc/quicksort.rb
    ruby/rspec/start/bowling.rb
    ruby/rspec/start/bowling_spec.rb
    ruby/rspec/start/Makefile
    ruby/addrinfo.rb
    ruby/addrinfo_server.rb
    ruby/countb.rb
    ruby/disass.rb
    ruby/duck_typing.rb
    ruby/README.md
    ruby/succ.rb
    ruby/u2b.rb
    scala/package/a/b/Apple\$Core.class
    scala/package/a/b/Apple.class
    scala/package/componion.scala
    scala/package/packages.scala
    scala/package/scope.scala
    scala/traits/Animal.class
    scala/traits/animals.scala
    scala/traits/Cat.class
    scala/traits/FourLegged.class
    scala/traits/Furry\$class.class
    scala/traits/Furry.class
    scala/traits/HasLegs.class
    scala/traits/Hello.class
    scala/12_2.scala
    scala/12_5.scala
    scala/abstract.scala
    scala/actor.scala
    scala/anagram.scala
    scala/apptraits.scala
    scala/bang.scala
    scala/binarySearch.scala
    scala/books.scala
    scala/casec.scala
    scala/ChecksumAccumulator.scala
    scala/closure.scala
    scala/collection.scala
    scala/component.scala
    scala/default_param.scala
    scala/Element.class
    scala/extractor.scala
    scala/FindLongLines.scala
    scala/foreach.scala
    scala/greet.scala
    scala/grep.scala
    scala/implicit.scala
    scala/inet_address.scala
    scala/iterator.scala
    scala/jetSet.scala
    scala/linearization.scala
    scala/longestWord.scala
    scala/Makefile
    scala/monad.scala
    scala/named_param.scala
    scala/neg.scala
    scala/option.scala
    scala/pass_func.scala
    scala/Rational.scala
    scala/repeat_param.scala
    scala/sort.scala
    scala/Summer.scala
    scala/table.scala
    scala/traits.scala
    scala/triangle.scala
    scala/yield.scala
    smalltalk/first.st
    specs/jws3/httpd.spec
    specs/jws3/httpd22.spec
    specs/foo.spec
    specs/httpd.spec
    specs/httpd22-filelist
    specs/httpd22.spec
    specs/httpd24-filelist
    specs/mod_bmx.spec
    ssl/a.out.dSYM/Contents/Resources/DWARF/a.out
    ssl/a.out.dSYM/Contents/Info.plist
    ssl/huge.dSYM/Contents/Resources/DWARF/huge
    ssl/huge.dSYM/Contents/Info.plist
    ssl/a.out
    ssl/asn1.c
    ssl/calloc.c
    ssl/common.c
    ssl/common.h
    ssl/htons.c
    ssl/http.c
    ssl/huge.c
    ssl/huge.h
    ssl/Makefile
    ssl/overflow.c
    ssl/rsa.c
    ssl/sign.c
    ssl/webserver.c
    sslbook/appC/https.c
    sslbook/appC/Makefile
    sslbook/appC/ssl.c
    sslbook/appC/ssl.h
    sslbook/ch01/http.dSYM/Contents/Resources/DWARF/http
    sslbook/ch01/http.dSYM/Contents/Info.plist
    sslbook/ch01/webserver.dSYM/Contents/Resources/DWARF/webserver
    sslbook/ch01/webserver.dSYM/Contents/Info.plist
    sslbook/ch01/a.out
    sslbook/ch01/base64.c
    sslbook/ch01/base64.h
    sslbook/ch01/http
    sslbook/ch01/http.c
    sslbook/ch01/Makefile
    sslbook/ch01/webserver
    sslbook/ch01/webserver.c
    sslbook/ch02/aes.dSYM/Contents/Resources/DWARF/aes
    sslbook/ch02/aes.dSYM/Contents/Info.plist
    sslbook/ch02/des.dSYM/Contents/Resources/DWARF/des
    sslbook/ch02/des.dSYM/Contents/Info.plist
    sslbook/ch02/rc4.dSYM/Contents/Resources/DWARF/rc4
    sslbook/ch02/rc4.dSYM/Contents/Info.plist
    sslbook/ch02/aes.c
    sslbook/ch02/aes.h
    sslbook/ch02/des.c
    sslbook/ch02/des.h
    sslbook/ch02/hex.c
    sslbook/ch02/hex.h
    sslbook/ch02/Makefile
    sslbook/ch02/rc4.c
    sslbook/ch02/rc4.h
    sslbook/ch03/dh.h
    sslbook/ch03/ecc_int.c
    sslbook/ch03/ecc_int.h
    sslbook/ch03/huge.c
    sslbook/ch03/huge.h
    sslbook/ch03/Makefile
    sslbook/ch03/rsa.c
    sslbook/ch03/rsa.h
    sslbook/ch04/digest.c
    sslbook/ch04/digest.h
    sslbook/ch04/dsa.c
    sslbook/ch04/dsa.h
    sslbook/ch04/ecc.c
    sslbook/ch04/ecc.h
    sslbook/ch04/ecdsa.c
    sslbook/ch04/ecdsa.h
    sslbook/ch04/hmac.c
    sslbook/ch04/hmac.h
    sslbook/ch04/Makefile
    sslbook/ch04/md5.c
    sslbook/ch04/md5.h
    sslbook/ch04/sha.c
    sslbook/ch04/sha.h
    sslbook/ch05/asn1.c
    sslbook/ch05/asn1.h
    sslbook/ch05/Makefile
    sslbook/ch05/x509.c
    sslbook/ch05/x509.h
    sslbook/ch06/https.c
    sslbook/ch06/Makefile
    sslbook/ch06/prf.c
    sslbook/ch06/prf.h
    sslbook/ch06/tls.c
    sslbook/ch06/tls.h
    sslbook/ch06/x509.c
    sslbook/ch06/x509.h
    sslbook/ch07/cert.der
    sslbook/ch07/file.c
    sslbook/ch07/file.h
    sslbook/ch07/key.der
    sslbook/ch07/Makefile
    sslbook/ch07/privkey.c
    sslbook/ch07/privkey.h
    sslbook/ch07/ssl_webserver.c
    sslbook/ch07/tls.c
    sslbook/ch07/tls.h
    sslbook/ch08/https.c
    sslbook/ch08/Makefile
    sslbook/ch08/rsa.c
    sslbook/ch08/rsa.h
    sslbook/ch08/tls.c
    sslbook/ch08/tls.h
    sslbook/ch08/x509.c
    sslbook/ch09/aes.c
    sslbook/ch09/aes.h
    sslbook/ch09/ecc.c
    sslbook/ch09/ecc.h
    sslbook/ch09/Makefile
    sslbook/ch09/prf.c
    sslbook/ch09/prf.h
    sslbook/ch09/tls.c
    sslbook/ch09/tls.h
    sslbook/ch09/x509.c
    sslbook/ch09/x509.h
    sslbook/ch10/https.c
    sslbook/ch10/https_openssl.c
    sslbook/ch10/Makefile
    sslcmd/selfsign.sh
    tlpi-book/acl/acl_update.c
    tlpi-book/acl/acl_view.c
    tlpi-book/acl/Makefile
    tlpi-book/altio/demo_sigio.c
    tlpi-book/altio/epoll_input.c
    tlpi-book/altio/Makefile
    tlpi-book/altio/poll_pipes.c
    tlpi-book/altio/select_mq.c
    tlpi-book/altio/self_pipe.c
    tlpi-book/altio/t_select.c
    tlpi-book/cap/check_password_caps.c
    tlpi-book/cap/Makefile
    tlpi-book/daemons/become_daemon.c
    tlpi-book/daemons/become_daemon.h
    tlpi-book/daemons/daemon_SIGHUP.c
    tlpi-book/daemons/Makefile
    tlpi-book/daemons/t_syslog.c
    tlpi-book/daemons/test_become_daemon.c
    tlpi-book/dirs_links/bad_symlink.c
    tlpi-book/dirs_links/file_type_stats.c
    tlpi-book/dirs_links/list_files.c
    tlpi-book/dirs_links/list_files_readdir_r.c
    tlpi-book/dirs_links/Makefile
    tlpi-book/dirs_links/nftw_dir_tree.c
    tlpi-book/dirs_links/t_dirbasename.c
    tlpi-book/dirs_links/t_unlink.c
    tlpi-book/dirs_links/view_symlink.c
    tlpi-book/filebuff/copy.c
    tlpi-book/filebuff/direct_read.c
    tlpi-book/filebuff/Makefile
    tlpi-book/filebuff/mix23_linebuff.c
    tlpi-book/filebuff/mix23io.c
    tlpi-book/filebuff/write_bytes.c
    tlpi-book/fileio/atomic_append.c
    tlpi-book/fileio/bad_exclusive_open.c
    tlpi-book/fileio/copy.c
    tlpi-book/fileio/large_file.c
    tlpi-book/fileio/Makefile
    tlpi-book/fileio/multi_descriptors.c
    tlpi-book/fileio/seek_io.c
    tlpi-book/fileio/t_readv.c
    tlpi-book/fileio/t_truncate.c
    tlpi-book/filelock/create_pid_file.c
    tlpi-book/filelock/create_pid_file.h
    tlpi-book/filelock/i_fcntl_locking.c
    tlpi-book/filelock/Makefile
    tlpi-book/filelock/region_locking.c
    tlpi-book/filelock/region_locking.h
    tlpi-book/filelock/t_flock.c
    tlpi-book/files/chiflag.c
    tlpi-book/files/file_perms.c
    tlpi-book/files/file_perms.h
    tlpi-book/files/Makefile
    tlpi-book/files/t_chown.c
    tlpi-book/files/t_stat.c
    tlpi-book/files/t_umask.c
    tlpi-book/files/t_utime.c
    tlpi-book/files/t_utimes.c
    tlpi-book/filesys/Makefile
    tlpi-book/filesys/t_mount.c
    tlpi-book/filesys/t_statfs.c
    tlpi-book/filesys/t_statvfs.c
    tlpi-book/filesys/t_umount.c
    tlpi-book/getopt/Makefile
    tlpi-book/getopt/t_getopt.c
    tlpi-book/inotify/demo_inotify.c
    tlpi-book/inotify/dnotify.c
    tlpi-book/inotify/Makefile
    tlpi-book/lib/alt_functions.c
    tlpi-book/lib/alt_functions.h
    tlpi-book/lib/alt_functions.o
    tlpi-book/lib/become_daemon.c
    tlpi-book/lib/become_daemon.h
    tlpi-book/lib/become_daemon.o
    tlpi-book/lib/binary_sems.c
    tlpi-book/lib/binary_sems.h
    tlpi-book/lib/binary_sems.o
    tlpi-book/lib/Build_ename.sh
    tlpi-book/lib/create_pid_file.c
    tlpi-book/lib/create_pid_file.h
    tlpi-book/lib/create_pid_file.o
    tlpi-book/lib/curr_time.c
    tlpi-book/lib/curr_time.h
    tlpi-book/lib/curr_time.o
    tlpi-book/lib/ename.c.inc
    tlpi-book/lib/error_functions.c
    tlpi-book/lib/error_functions.h
    tlpi-book/lib/error_functions.o
    tlpi-book/lib/event_flags.c
    tlpi-book/lib/event_flags.h
    tlpi-book/lib/event_flags.o
    tlpi-book/lib/file_perms.c
    tlpi-book/lib/file_perms.h
    tlpi-book/lib/file_perms.o
    tlpi-book/lib/get_num.c
    tlpi-book/lib/get_num.h
    tlpi-book/lib/get_num.o
    tlpi-book/lib/inet_sockets.c
    tlpi-book/lib/inet_sockets.h
    tlpi-book/lib/itimerspec_from_str.c
    tlpi-book/lib/itimerspec_from_str.h
    tlpi-book/lib/Makefile
    tlpi-book/lib/print_rlimit.c
    tlpi-book/lib/print_rlimit.h
    tlpi-book/lib/print_rlimit.o
    tlpi-book/lib/print_rusage.c
    tlpi-book/lib/print_rusage.h
    tlpi-book/lib/print_wait_status.c
    tlpi-book/lib/print_wait_status.h
    tlpi-book/lib/print_wait_status.o
    tlpi-book/lib/pty_fork.c
    tlpi-book/lib/pty_fork.h
    tlpi-book/lib/pty_fork.o
    tlpi-book/lib/pty_master_open.c
    tlpi-book/lib/pty_master_open.h
    tlpi-book/lib/pty_master_open.o
    tlpi-book/lib/rdwrn.c
    tlpi-book/lib/rdwrn.h
    tlpi-book/lib/rdwrn.o
    tlpi-book/lib/read_line.c
    tlpi-book/lib/read_line.h
    tlpi-book/lib/read_line.o
    tlpi-book/lib/read_line_buf.c
    tlpi-book/lib/read_line_buf.h
    tlpi-book/lib/read_line_buf.o
    tlpi-book/lib/README
    tlpi-book/lib/region_locking.c
    tlpi-book/lib/region_locking.h
    tlpi-book/lib/region_locking.o
    tlpi-book/lib/semun.h
    tlpi-book/lib/signal.c
    tlpi-book/lib/signal.o
    tlpi-book/lib/signal_functions.c
    tlpi-book/lib/signal_functions.h
    tlpi-book/lib/tlpi_hdr.h
    tlpi-book/lib/tty_functions.c
    tlpi-book/lib/tty_functions.h
    tlpi-book/lib/tty_functions.o
    tlpi-book/lib/ugid_functions.c
    tlpi-book/lib/ugid_functions.h
    tlpi-book/lib/ugid_functions.o
    tlpi-book/lib/unix_sockets.c
    tlpi-book/lib/unix_sockets.h
    tlpi-book/lib/unix_sockets.o
    tlpi-book/loginacct/dump_utmpx.c
    tlpi-book/loginacct/Makefile
    tlpi-book/loginacct/utmpx_login.c
    tlpi-book/loginacct/view_lastlog.c
    tlpi-book/memalloc/free_and_sbrk.c
    tlpi-book/memalloc/Makefile
    tlpi-book/mmap/anon_mmap.c
    tlpi-book/mmap/Makefile
    tlpi-book/mmap/mmcat.c
    tlpi-book/mmap/mmcopy.c
    tlpi-book/mmap/t_mmap.c
    tlpi-book/mmap/t_remap_file_pages.c
    tlpi-book/pgsjc/catch_SIGHUP.c
    tlpi-book/pgsjc/disc_SIGHUP.c
    tlpi-book/pgsjc/handling_SIGTSTP.c
    tlpi-book/pgsjc/job_mon.c
    tlpi-book/pgsjc/Makefile
    tlpi-book/pgsjc/orphaned_pgrp_SIGHUP.c
    tlpi-book/pgsjc/t_setsid.c
    tlpi-book/pipes/change_case.c
    tlpi-book/pipes/fifo_seqnum.h
    tlpi-book/pipes/fifo_seqnum_client.c
    tlpi-book/pipes/fifo_seqnum_server.c
    tlpi-book/pipes/Makefile
    tlpi-book/pipes/pipe_ls_wc.c
    tlpi-book/pipes/pipe_sync.c
    tlpi-book/pipes/popen_glob.c
    tlpi-book/pipes/simple_pipe.c
    tlpi-book/pmsg/Makefile
    tlpi-book/pmsg/mq_notify_sig.c
    tlpi-book/pmsg/mq_notify_sigwaitinfo.c
    tlpi-book/pmsg/mq_notify_thread.c
    tlpi-book/pmsg/pmsg_create.c
    tlpi-book/pmsg/pmsg_getattr.c
    tlpi-book/pmsg/pmsg_receive.c
    tlpi-book/pmsg/pmsg_send.c
    tlpi-book/pmsg/pmsg_unlink.c
    tlpi-book/proc/bad_longjmp.c
    tlpi-book/proc/display_env.c
    tlpi-book/proc/longjmp.c
    tlpi-book/proc/Makefile
    tlpi-book/proc/mem_segments.c
    tlpi-book/proc/modify_env.c
    tlpi-book/proc/necho.c
    tlpi-book/proc/setenv.c
    tlpi-book/proc/setjmp_vars.c
    tlpi-book/proc/t_getenv.c
    tlpi-book/proccred/idshow.c
    tlpi-book/proccred/Makefile
    tlpi-book/procexec/acct_on.c
    tlpi-book/procexec/acct_v3_view.c
    tlpi-book/procexec/acct_view.c
    tlpi-book/procexec/child_status.c
    tlpi-book/procexec/closeonexec.c
    tlpi-book/procexec/demo_clone.c
    tlpi-book/procexec/envargs.c
    tlpi-book/procexec/execlp.c
    tlpi-book/procexec/exit_handlers.c
    tlpi-book/procexec/footprint.c
    tlpi-book/procexec/fork_file_sharing.c
    tlpi-book/procexec/fork_sig_sync.c
    tlpi-book/procexec/fork_stdio_buf.c
    tlpi-book/procexec/fork_whos_on_first.c
    tlpi-book/procexec/fork_whos_on_first.count.awk
    tlpi-book/procexec/longest_line.awk
    tlpi-book/procexec/make_zombie.c
    tlpi-book/procexec/Makefile
    tlpi-book/procexec/multi_SIGCHLD.c
    tlpi-book/procexec/multi_wait.c
    tlpi-book/procexec/necho.c
    tlpi-book/procexec/orphan.c
    tlpi-book/procexec/print_wait_status.c
    tlpi-book/procexec/print_wait_status.h
    tlpi-book/procexec/simple_system.c
    tlpi-book/procexec/system.c
    tlpi-book/procexec/t_clone.c
    tlpi-book/procexec/t_execl.c
    tlpi-book/procexec/t_execle.c
    tlpi-book/procexec/t_execlp.c
    tlpi-book/procexec/t_execve.c
    tlpi-book/procexec/t_fork.c
    tlpi-book/procexec/t_system.c
    tlpi-book/procexec/t_vfork.c
    tlpi-book/procexec/vfork_fd_test.c
    tlpi-book/procpri/demo_sched_fifo.c
    tlpi-book/procpri/Makefile
    tlpi-book/procpri/sched_set.c
    tlpi-book/procpri/sched_view.c
    tlpi-book/procpri/t_sched_getaffinity.c
    tlpi-book/procpri/t_sched_setaffinity.c
    tlpi-book/procpri/t_setpriority.c
    tlpi-book/procres/Makefile
    tlpi-book/procres/print_rlimit.c
    tlpi-book/procres/print_rlimit.h
    tlpi-book/procres/print_rusage.c
    tlpi-book/procres/print_rusage.h
    tlpi-book/procres/rlimit_nproc.c
    tlpi-book/procres/rusage.c
    tlpi-book/procres/rusage_wait.c
    tlpi-book/progconc/Makefile
    tlpi-book/progconc/syscall_speed.c
    tlpi-book/progconc/syscall_speed.o
    tlpi-book/psem/Makefile
    tlpi-book/psem/psem_create.c
    tlpi-book/psem/psem_getvalue.c
    tlpi-book/psem/psem_post.c
    tlpi-book/psem/psem_timedwait.c
    tlpi-book/psem/psem_trywait.c
    tlpi-book/psem/psem_unlink.c
    tlpi-book/psem/psem_wait.c
    tlpi-book/psem/thread_incr_psem.c
    tlpi-book/pshm/Makefile
    tlpi-book/pshm/pshm_create.c
    tlpi-book/pshm/pshm_read.c
    tlpi-book/pshm/pshm_unlink.c
    tlpi-book/pshm/pshm_write.c
    tlpi-book/pty/Makefile
    tlpi-book/pty/pty_fork.c
    tlpi-book/pty/pty_fork.h
    tlpi-book/pty/pty_master_open.c
    tlpi-book/pty/pty_master_open.h
    tlpi-book/pty/pty_master_open_bsd.c
    tlpi-book/pty/script.c
    tlpi-book/pty/unbuffer.c
    tlpi-book/shlibs/demo_Bsymbolic/build.sh
    tlpi-book/shlibs/demo_Bsymbolic/foo1.c
    tlpi-book/shlibs/demo_Bsymbolic/foo2.c
    tlpi-book/shlibs/demo_Bsymbolic/foo3.c
    tlpi-book/shlibs/demo_Bsymbolic/prog.c
    tlpi-book/shlibs/rpath_demo/d1/modx1.c
    tlpi-book/shlibs/rpath_demo/d2/modx2.c
    tlpi-book/shlibs/rpath_demo/build-rpath-link.sh
    tlpi-book/shlibs/rpath_demo/build.sh
    tlpi-book/shlibs/rpath_demo/prog.c
    tlpi-book/shlibs/version_scripts/sv_build.sh
    tlpi-book/shlibs/version_scripts/sv_lib_v1.c
    tlpi-book/shlibs/version_scripts/sv_lib_v2.c
    tlpi-book/shlibs/version_scripts/sv_libabc.c
    tlpi-book/shlibs/version_scripts/sv_prog.c
    tlpi-book/shlibs/version_scripts/sv_prog_abc.c
    tlpi-book/shlibs/version_scripts/sv_prog_complex.c
    tlpi-book/shlibs/version_scripts/sv_v1.map
    tlpi-book/shlibs/version_scripts/sv_v2.map
    tlpi-book/shlibs/version_scripts/vis.map
    tlpi-book/shlibs/version_scripts/vis_build.sh
    tlpi-book/shlibs/version_scripts/vis_comm.c
    tlpi-book/shlibs/version_scripts/vis_f1.c
    tlpi-book/shlibs/version_scripts/vis_f2.c
    tlpi-book/shlibs/Demo_no_lib.sh
    tlpi-book/shlibs/Demo_shared_lib.sh
    tlpi-book/shlibs/Demo_static_lib.sh
    tlpi-book/shlibs/dynload.c
    tlpi-book/shlibs/dynload.o
    tlpi-book/shlibs/libdemo.so
    tlpi-book/shlibs/libfoo.so
    tlpi-book/shlibs/Makefile
    tlpi-book/shlibs/mod1.c
    tlpi-book/shlibs/mod2.c
    tlpi-book/shlibs/mod3.c
    tlpi-book/shlibs/prog.c
    tlpi-book/shlibs/prog_linker_name
    tlpi-book/shlibs/prog_soname
    tlpi-book/shlibs/prog_with_rpath
    tlpi-book/signals/catch_rtsigs.c
    tlpi-book/signals/demo_SIGFPE.c
    tlpi-book/signals/ignore_pending_sig.c
    tlpi-book/signals/intquit.c
    tlpi-book/signals/Makefile
    tlpi-book/signals/nonreentrant.c
    tlpi-book/signals/ouch.c
    tlpi-book/signals/sig_receiver.c
    tlpi-book/signals/sig_sender.c
    tlpi-book/signals/sig_speed_sigsuspend.c
    tlpi-book/signals/siginterrupt.c
    tlpi-book/signals/sigmask_longjmp.c
    tlpi-book/signals/signal.c
    tlpi-book/signals/signal_functions.c
    tlpi-book/signals/signal_functions.h
    tlpi-book/signals/signalfd_sigval.c
    tlpi-book/signals/t_kill.c
    tlpi-book/signals/t_sigaltstack.c
    tlpi-book/signals/t_sigqueue.c
    tlpi-book/signals/t_sigsuspend.c
    tlpi-book/signals/t_sigwaitinfo.c
    tlpi-book/sockets/i6d_ucase.h
    tlpi-book/sockets/i6d_ucase_cl.c
    tlpi-book/sockets/i6d_ucase_sv.c
    tlpi-book/sockets/i6d_ucase_sv.o
    tlpi-book/sockets/id_echo.h
    tlpi-book/sockets/id_echo_cl.c
    tlpi-book/sockets/id_echo_sv.c
    tlpi-book/sockets/inet_sockets.c
    tlpi-book/sockets/inet_sockets.h
    tlpi-book/sockets/is_echo_cl.c
    tlpi-book/sockets/is_echo_inetd_sv.c
    tlpi-book/sockets/is_echo_sv.c
    tlpi-book/sockets/is_echo_v2_sv.c
    tlpi-book/sockets/is_seqnum.h
    tlpi-book/sockets/is_seqnum_cl.c
    tlpi-book/sockets/is_seqnum_sv.c
    tlpi-book/sockets/is_seqnum_v2.h
    tlpi-book/sockets/is_seqnum_v2_cl.c
    tlpi-book/sockets/is_seqnum_v2_sv.c
    tlpi-book/sockets/Makefile
    tlpi-book/sockets/rdwrn.c
    tlpi-book/sockets/rdwrn.h
    tlpi-book/sockets/read_line.c
    tlpi-book/sockets/read_line.h
    tlpi-book/sockets/read_line_buf.c
    tlpi-book/sockets/read_line_buf.h
    tlpi-book/sockets/README
    tlpi-book/sockets/scm_cred.h
    tlpi-book/sockets/scm_cred_recv.c
    tlpi-book/sockets/scm_cred_send.c
    tlpi-book/sockets/scm_rights.h
    tlpi-book/sockets/scm_rights_recv.c
    tlpi-book/sockets/scm_rights_send.c
    tlpi-book/sockets/sendfile.c
    tlpi-book/sockets/socknames.c
    tlpi-book/sockets/t_gethostbyname.c
    tlpi-book/sockets/t_getservbyname.c
    tlpi-book/sockets/ud_ucase.h
    tlpi-book/sockets/ud_ucase_cl.c
    tlpi-book/sockets/ud_ucase_sv.c
    tlpi-book/sockets/unix_sockets.c
    tlpi-book/sockets/unix_sockets.h
    tlpi-book/sockets/us_abstract_bind.c
    tlpi-book/sockets/us_xfr.h
    tlpi-book/sockets/us_xfr_cl.c
    tlpi-book/sockets/us_xfr_sv.c
    tlpi-book/sockets/us_xfr_v2.h
    tlpi-book/sockets/us_xfr_v2_cl.c
    tlpi-book/sockets/us_xfr_v2_sv.c
    tlpi-book/svipc/Makefile
    tlpi-book/svipc/svmsg_demo_server.c
    tlpi-book/svipc/t_ftok.c
    tlpi-book/svmsg/Makefile
    tlpi-book/svmsg/svmsg_chqbytes.c
    tlpi-book/svmsg/svmsg_create.c
    tlpi-book/svmsg/svmsg_file.h
    tlpi-book/svmsg/svmsg_file_client.c
    tlpi-book/svmsg/svmsg_file_server.c
    tlpi-book/svmsg/svmsg_info.c
    tlpi-book/svmsg/svmsg_ls.c
    tlpi-book/svmsg/svmsg_receive.c
    tlpi-book/svmsg/svmsg_rm.c
    tlpi-book/svmsg/svmsg_send.c
    tlpi-book/svsem/binary_sems.c
    tlpi-book/svsem/binary_sems.h
    tlpi-book/svsem/event_flags.c
    tlpi-book/svsem/event_flags.h
    tlpi-book/svsem/Makefile
    tlpi-book/svsem/semun.h
    tlpi-book/svsem/svsem_bad_init.c
    tlpi-book/svsem/svsem_create.c
    tlpi-book/svsem/svsem_demo.c
    tlpi-book/svsem/svsem_good_init.c
    tlpi-book/svsem/svsem_info.c
    tlpi-book/svsem/svsem_mon.c
    tlpi-book/svsem/svsem_op.c
    tlpi-book/svsem/svsem_rm.c
    tlpi-book/svsem/svsem_setall.c
    tlpi-book/svshm/Makefile
    tlpi-book/svshm/svshm_attach.c
    tlpi-book/svshm/svshm_create.c
    tlpi-book/svshm/svshm_info.c
    tlpi-book/svshm/svshm_lock.c
    tlpi-book/svshm/svshm_mon.c
    tlpi-book/svshm/svshm_rm.c
    tlpi-book/svshm/svshm_unlock.c
    tlpi-book/svshm/svshm_xfr.h
    tlpi-book/svshm/svshm_xfr_reader.c
    tlpi-book/svshm/svshm_xfr_writer.c
    tlpi-book/sysinfo/Makefile
    tlpi-book/sysinfo/procfs_pidmax.c
    tlpi-book/sysinfo/procfs_user_exe.c
    tlpi-book/sysinfo/t_uname.c
    tlpi-book/syslim/Makefile
    tlpi-book/syslim/t_fpathconf.c
    tlpi-book/syslim/t_sysconf.c
    tlpi-book/threads/detached_attrib.c
    tlpi-book/threads/Makefile
    tlpi-book/threads/one_time_init.c
    tlpi-book/threads/prod_condvar.c
    tlpi-book/threads/prod_no_condvar.c
    tlpi-book/threads/simple_thread.c
    tlpi-book/threads/strerror.c
    tlpi-book/threads/strerror_test.c
    tlpi-book/threads/strerror_tls.c
    tlpi-book/threads/strerror_tsd.c
    tlpi-book/threads/thread_cancel.c
    tlpi-book/threads/thread_cleanup.c
    tlpi-book/threads/thread_incr.c
    tlpi-book/threads/thread_incr_mutex.c
    tlpi-book/threads/thread_multijoin.c
    tlpi-book/time/calendar_time.c
    tlpi-book/time/curr_time.c
    tlpi-book/time/curr_time.h
    tlpi-book/time/Makefile
    tlpi-book/time/process_time.c
    tlpi-book/time/show_time.c
    tlpi-book/time/strtime.c
    tlpi-book/time/t_stime.c
    tlpi-book/timers/demo_timerfd.c
    tlpi-book/timers/itimerspec_from_str.c
    tlpi-book/timers/itimerspec_from_str.h
    tlpi-book/timers/Makefile
    tlpi-book/timers/ptmr_null_evp.c
    tlpi-book/timers/ptmr_sigev_signal.c
    tlpi-book/timers/ptmr_sigev_thread.c
    tlpi-book/timers/real_timer.c
    tlpi-book/timers/t_clock_nanosleep.c
    tlpi-book/timers/t_nanosleep.c
    tlpi-book/timers/timed_read.c
    tlpi-book/tty/demo_SIGWINCH.c
    tlpi-book/tty/Makefile
    tlpi-book/tty/new_intr.c
    tlpi-book/tty/no_echo.c
    tlpi-book/tty/test_tty_functions.c
    tlpi-book/tty/tty_functions.c
    tlpi-book/tty/tty_functions.h
    tlpi-book/tty/ttyname.c
    tlpi-book/users_groups/check_password.c
    tlpi-book/users_groups/Makefile
    tlpi-book/users_groups/t_getpwent.c
    tlpi-book/users_groups/t_getpwnam_r.c
    tlpi-book/users_groups/ugid_functions.c
    tlpi-book/users_groups/ugid_functions.h
    tlpi-book/vmem/madvise_dontneed.c
    tlpi-book/vmem/Makefile
    tlpi-book/vmem/memlock.c
    tlpi-book/vmem/t_mprotect.c
    tlpi-book/xattr/Makefile
    tlpi-book/xattr/t_setxattr.c
    tlpi-book/xattr/xattr_view.c
    tlpi-book/BUILDING
    tlpi-book/CHANGES
    tlpi-book/COPYING.agpl-v3
    tlpi-book/COPYING.gpl-v3
    tlpi-book/COPYING.lgpl-v3
    tlpi-book/Makefile
    tlpi-book/Makefile.inc
    tlpi-book/Makefile.inc.FreeBSD
    tlpi-book/Makefile.inc.HP-UX
    tlpi-book/Makefile.inc.MacOSX
    tlpi-book/Makefile.inc.Solaris
    tlpi-book/Makefile.inc.Tru64
    tlpi-book/README
    tlpi-book/switch.c
    uml/example1.txt
    uml/frag.sd
    uml/new_destroy.sd
    uml/nutshell4.zargo
    uml/uml13.zargo
    uml/uml14.zargo
    uml/UMLDistilled.zargo
    uml/workbook.zargo
    uml/workbook2.zargo
    work/hahaha.sh
    xml/play1.dtd
    xml/play1.xml
    xml/play1.xsd
    "#.gitignore#"
    "#README.md#"
    Makefile
    README.md
    recipies.iml)

add_executable(recipies ${SOURCE_FILES})